@@ -38,6 +38,8 @@ Version 1.8.0current:
 
   Removed Features:
     * url_prefix setting
+    * traceback_log_dir setting (we just use logging.exception)
+
 
 Version 1.7.0:
   Note: This is a reduced CHANGES, ommitting details from rc/beta test and
